# nautronics_auv

./: README.md  nautronics.repos  requirements.txt
.github/workflows/: ros2_build.yml
auv_cam/: package.xml  setup.cfg  setup.py
auv_cam/auv_cam/: camera_calibration_node.py
auv_description/: CMakeLists.txt  package.xml
auv_description/config/: bridge.yaml  rviz_config.rviz
auv_description/env-hooks/: auv_description.dsv.in
auv_description/launch/: gazebo.launch.py
auv_description/models/bluerov2_heavy/: model.sdf
auv_description/models/prototype_vehicle/: model.config  model.sdf  prototype.urdf  prototype.urdf.xacro
auv_description/models/prototype_vehicle/macros/: camera_macro.xacro  imu_macro.xacro  pipe_macro.xacro  plugins.xacro  sonar_macro.xacro  thruster_macro.xacro
auv_description/models/prototype_vehicle/meshes/: sim.mtl
auv_description/models/robosub_gate/: model.config  model.sdf
auv_description/models/robosub_gate/meshes/: gate.dae
auv_description/worlds/: deneme.world  underwater.world
auv_hardware/: Readme.md  package.xml  setup.cfg  setup.py
auv_hardware/auv_hardware/: baro_publisher.py  ping_sonar.py  pixhaw_battery_node.py  pwm_router.py
auv_hardware/launch/: system_startup.launch.py
auv_navigation/: CMakeLists.txt  package.xml
auv_navigation/src/: get_data.py  graph.py  scaler_x.pkl  scaler_y.pkl  train.py  train_tcn.py
auv_navigation/src/auv_data/: test.py
